feat: add infinite loading, filter, skeleton components and more

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -4,6 +4,7 @@
 
   --number-title-color: #e9e7e8;
 
+  --all-text-color: #66625c;
   --grass-text-color: #22c02a;
   --poison-text-color: #a040a0;
   --fire-text-color: #f08030;
