test(frontend): add additional tests

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -24,4 +24,18 @@
   --dragon-text-color: #7038f8;
 
   --box-shadow-color: #e9e8e7;
+
+  // breakpoints
+  --break-320: 20em;
+  --break-321: 20.0625em;
+  --break-480: 30em;
+  --break-600: 37.5em;
+  --break-768: 48em;
+  --break-980: 61.25em;
+  --break-1024: 64em;
+  --break-1200: 75em;
+  --break-1224: 76.5em;
+  --break-1280: 80em;
+  --break-1366: 85.375em;
+  --break-1824: 114em;
 }
